# drivectl

./: .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  drivectl.service  pyproject.toml  requirements.txt
backend/drivectl/: __init__.py  __main__.py  app.py  classify.py  config.py  redfish.py  store.py
backend/drivectl/static/: app.js  index.html  tailwind.css
frontend/: build.sh  input.css
