[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drivectl"
version = "0.1.0"
description = "Web GUI to power HPE server drives on/off via iLO Redfish"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "PyYAML>=6.0",
]

[project.scripts]
drivectl = "drivectl.__main__:main"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.setuptools.package-data]
drivectl = ["static/*"]
